[gd_scene load_steps=19 format=3 uid="uid://c0dg3pmtl6x4h"]

[ext_resource type="PackedScene" uid="uid://b2s6b21e0mdoq" path="res://Scenes/Prototype/player.tscn" id="1_eob2c"]
[ext_resource type="Script" path="res://Scenes/Prototype/ProceduralGeneration/game_scene.gd" id="1_m37u2"]
[ext_resource type="Texture2D" uid="uid://iufwufgmk1ep" path="res://Art/environment/240115_background03.png" id="1_x83jg"]
[ext_resource type="Shader" path="res://Scenes/Prototype/ProceduralGeneration/Background/blur.gdshader" id="2_e3yg1"]
[ext_resource type="PackedScene" uid="uid://crjumbkujnhpg" path="res://Scenes/Prototype/ProceduralGeneration/procedural_generator.tscn" id="2_uajhw"]
[ext_resource type="PackedScene" uid="uid://dwao3xt4s1f7l" path="res://Scenes/Prototype/ProceduralGeneration/Obstacles/Non_lethal/obstacle_rock1.tscn" id="3_l03qm"]
[ext_resource type="PackedScene" uid="uid://bvirx2k4b34u7" path="res://Scenes/Prototype/hud.tscn" id="6_4iccb"]
[ext_resource type="PackedScene" uid="uid://3edwepn5lj6q" path="res://Scenes/Prototype/ProceduralGeneration/Obstacles/Non_lethal/obstacle_rock2.tscn" id="7_37v55"]
[ext_resource type="PackedScene" uid="uid://db0ox72wglw8n" path="res://Scenes/Prototype/ProceduralGeneration/Obstacles/Lethal/lethal_obstacle.tscn" id="8_81sax"]
[ext_resource type="PackedScene" uid="uid://bthddbnt0ftn" path="res://Scenes/Prototype/ProceduralGeneration/Obstacles/Non_lethal/obstacle_rock3.tscn" id="8_thus1"]
[ext_resource type="PackedScene" uid="uid://1drub48tew75" path="res://Scenes/Prototype/ProceduralGeneration/Obstacles/Non_lethal/obstacle_rock4.tscn" id="9_6ukbf"]
[ext_resource type="PackedScene" uid="uid://bkhwulrv82ib4" path="res://Scenes/Prototype/ProceduralGeneration/Obstacles/Non_lethal/obstacle_rock5.tscn" id="10_kt37t"]
[ext_resource type="PackedScene" uid="uid://c0cfwnwy52x8e" path="res://Scenes/Prototype/spreading_spring.tscn" id="13_ixlb5"]

[sub_resource type="QuadMesh" id="QuadMesh_gxpgf"]
size = Vector2(10000, 1000)

[sub_resource type="Gradient" id="Gradient_qpfm8"]
offsets = PackedFloat32Array(1)
colors = PackedColorArray(1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_nisbd"]
gradient = SubResource("Gradient_qpfm8")
width = 1
height = 1

[sub_resource type="ShaderMaterial" id="ShaderMaterial_naxab"]
shader = ExtResource("2_e3yg1")
shader_parameter/lod = 1.0

[sub_resource type="QuadMesh" id="QuadMesh_6n3c1"]
size = Vector2(5000, 100)

[node name="ProceduralGenerationMainScene" type="Node2D"]
script = ExtResource("1_m37u2")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="Sprite2D_sky" type="Sprite2D" parent="ParallaxBackground"]
z_index = -10
position = Vector2(577, 322.5)
texture = ExtResource("1_x83jg")

[node name="ParallaxLayer1_very_far" type="ParallaxLayer" parent="ParallaxBackground"]
z_index = -9
position = Vector2(0, -1000)
scale = Vector2(3, 3)
motion_scale = Vector2(0.1, 0.05)

[node name="ParallaxLayer2_far" type="ParallaxLayer" parent="ParallaxBackground"]
z_index = -8
position = Vector2(300, 300)
scale = Vector2(0.4, 0.4)
motion_scale = Vector2(0.1, 0.05)

[node name="MeshInstance2D" type="MeshInstance2D" parent="ParallaxBackground/ParallaxLayer2_far"]
modulate = Color(0.894118, 0.85098, 0.960784, 1)
position = Vector2(1362, 900)
mesh = SubResource("QuadMesh_gxpgf")

[node name="Atmosphere2" type="Sprite2D" parent="ParallaxBackground"]
modulate = Color(0.792157, 0.901961, 0.878431, 0.203922)
position = Vector2(3838, -1123)
scale = Vector2(11692, 5982)
texture = SubResource("GradientTexture2D_nisbd")

[node name="ParallaxLayer3_close" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2(100, -100)
scale = Vector2(1.2, 1.2)
motion_scale = Vector2(0.3, 0.2)

[node name="Blur" type="Sprite2D" parent="ParallaxBackground"]
material = SubResource("ShaderMaterial_naxab")
position = Vector2(3838, -1123)
scale = Vector2(11692, 5982)
texture = SubResource("GradientTexture2D_nisbd")

[node name="Atmosphere" type="Sprite2D" parent="ParallaxBackground"]
modulate = Color(1, 1, 1, 0.0705882)
position = Vector2(3838, -1123)
scale = Vector2(11692, 5982)
texture = SubResource("GradientTexture2D_nisbd")

[node name="ParallaxLayer4_very close" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2(0, -2900)
scale = Vector2(5, 5)

[node name="Player" parent="." instance=ExtResource("1_eob2c")]
position = Vector2(640, 610)

[node name="ProceduralGenerator" parent="." node_paths=PackedStringArray("player", "very_far_parallax_layer", "far_parallax_layer", "close_parallax_layer", "very_close_parallax_layer", "front_parallax_layer") instance=ExtResource("2_uajhw")]
player = NodePath("../Player")
very_far_parallax_layer = NodePath("../ParallaxBackground/ParallaxLayer1_very_far")
very_far_layer_min_spacing_x = 100
very_far_layer_max_spacing_x = 400
far_parallax_layer = NodePath("../ParallaxBackground/ParallaxLayer2_far")
far_layer_offset_y = 200
close_parallax_layer = NodePath("../ParallaxBackground/ParallaxLayer3_close")
close_layer_offset_y = 250
very_close_parallax_layer = NodePath("../ParallaxBackground/ParallaxLayer4_very close")
very_close_layer_offset_y = 450
front_parallax_layer = NodePath("../ParallaxBackground2 (Foreground)/ParallaxLayer5_front")
front_layer_offset_y = -1000
obstacles_ground = Array[PackedScene]([ExtResource("3_l03qm"), ExtResource("7_37v55"), ExtResource("8_thus1"), ExtResource("9_6ukbf"), ExtResource("10_kt37t")])
obstacles_max_spawn_interval = 1.5

[node name="ParallaxBackground2 (Foreground)" type="ParallaxBackground" parent="."]
layer = 1

[node name="ParallaxLayer5_front" type="ParallaxLayer" parent="ParallaxBackground2 (Foreground)"]
modulate = Color(0.803922, 0.803922, 0.803922, 1)
position = Vector2(0, 5000)
scale = Vector2(6, 6)
motion_scale = Vector2(2, 1)

[node name="MeshInstance2D" type="MeshInstance2D" parent="ParallaxBackground2 (Foreground)/ParallaxLayer5_front"]
modulate = Color(0.894118, 0.85098, 0.960784, 1)
z_index = 1
position = Vector2(152.5, -656.667)
mesh = SubResource("QuadMesh_6n3c1")

[node name="ScoreTimer" type="Timer" parent="."]

[node name="HUD" parent="." instance=ExtResource("6_4iccb")]

[node name="LethalObstacle" parent="." instance=ExtResource("8_81sax")]
position = Vector2(1304, 641)

[node name="SpreadingSpring" parent="." instance=ExtResource("13_ixlb5")]
position = Vector2(-72, 49)
speed = 900

[connection signal="hit" from="Player" to="." method="_game_over"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_score_timer_timeout"]
[connection signal="body_entered" from="LethalObstacle" to="Player" method="_on_obstacle_body_entered"]
